# wowband-app

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pyproject.toml
docs/: 01-protocol-spec.md  02-progress-log.md  03-code-walkthrough.md
src/: main.ts
src/linkband/: dsp.ts  models.ts  parser.ts  thresholds.ts
src/ui/: acc-view.ts  eeg-view.ts  index-card.ts  layout.ts  ppg-view.ts
tests/: dsp.test.ts  parser.test.ts
