[project]
name = "linkband"
version = "0.0.1"
description = "Link Band BLE SDK and DSP toolkit (Python)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.22",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
